# knowledge-graph

./: .env.example  .gitignore  Makefile  README.md  brainstorming_multi_agent_KG.md  docker-compose.dev.yml  docker-compose.ghcr.yml  docker-compose.yml  prompt_multi_agent_implementation.md
.claude/commands/: pre-commit-check.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  docker-publish.yml
books/notebooks/: Dockerfile  README.md  docker-compose.notebooks.yml  nb1_neo4j_graph_queries.ipynb  nb2_redis_vector_search.ipynb  nb3_rag_pipeline.ipynb  nb4_entity_extraction.ipynb  (+3 more)
knowledge-graph-agents/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
knowledge-graph-agents/agents/: analyst.py  client.py  ingestion.py  kgc.py  monitor.py  orchestrator.py  synthesis.py  validator.py
knowledge-graph-agents/api/: agent_api.py
knowledge-graph-agents/memory/: kg_memory.py  redis_history.py  redis_store.py
knowledge-graph-agents/orchestration/: graph.py  planner.py  router.py  state.py
knowledge-graph-agents/tests/: conftest.py  test_agents.py
knowledge-graph-agents/tools/: kg_tools.py
knowledge-graph-api/: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  requirements.txt
knowledge-graph-mcp/: .gitignore  Dockerfile  README.md  pyproject.toml
knowledge-graph-mcp/src/kg_mcp/: __init__.py  api_client.py  config.py  server.py  tools.py
knowledge-graph-mcp/tests/: test_tools.py
knowledge-graph-ui/: .dockerignore  .env.local.example  Dockerfile  README.md  package-lock.json  package.json
(+59 files in other folders)
