[project]
name = "knowledge-graph-mcp"
version = "0.1.0"
description = "MCP server for Knowledge Graph Lab API"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
]

[project.scripts]
kg-mcp = "kg_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kg_mcp"]

[tool.ruff]
line-length = 100
